# Insider-Trading-Detection

./: .env.example  .gitignore  APPROACH.md  README.md  pyproject.toml  validate.py
src/: config.py  db.py  main.py  models.py
src/detection/: detector.py  scorer.py  signals.py
src/indexers/: deposits.py  markets.py  trades.py
